--- a/Index.html
+++ b/Index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h1> Mateus Macedo </h1>
-<a href="">Bio</a>
-<a href="">CV</a>
+<a href="bio.html">Bio</a>
+<a href="cv">CV</a>
 
   </body>
 </html>
