--- a/cv.html
+++ b/cv.html
@@ -6,11 +6,87 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <h1>CV</h1>
+    <h1>Mateus Dazzi Macedo's CV</h1>
 
-    <p>Here is a list of my skills</p>
+<br/>
+
+    <p>Full name:Mateus Dazzi Macedo
+      <br/>
+       date of birth: 30th December 1995</p>
+       <br/>
+    <h2>List of skills and hobbies</h2>
+    <p>here is a list of my skills</p>
     <ul>
-      <li>coding in html</li>
+      <li>speak Portuguese</li>
+      <li>Computer skills</li>
+      <li>Problem solving</li>
+      <li>Can work under pressure</li>
+    </ul>
+
+<!-- bulletpoint list -->
+    <p>Here is a list of my hobbies</p>
+    <ul>
+      <li>Playing video games</li>
+      <li>Gluing models together</li>
+      <li>Playing pool</li>
+      <li>Computers</li>
+    </ul>
+
+    <br/>
+
+    <h2>Work experience</h2>
+    <ul>
+      <li>Office work</li>
+        <p>I have worked in an office doing PowerPoints, working with customer service, working
+           with IT, doing research work and I even hosted my own call conference where I showed
+           a PowerPoint presentation with research about a topic I was asked to research.</p>
+
+    <br/>
+
+      <li>English speaking teacher</li>
+        <p>I have also worked as an English speaking teacher where I had to plan, mark and teach.
+           I also had to take part in talking to 3 classes of about 30 student.</p>
+
+    <br/>
+
+      <li>technician/assist</li>
+        <p>The latest thing I have worked as is a technician at the collage I went to before
+           University. I helped set up an end of year show, fixed any computer of technical issues
+           there were, worked in promoting the course I was based at and helped with some adminstrator
+           work</p>
+    </ul>
+
+    <br/>
+
+    <h2>Education</h2>
+    <ol>
+      <li>St Joseph's</li>
+      <p>This was the first primary school I went to which I have some memories of.</p>
+    <br/>
+    <br/>
+      <li>Our Lady of Dolours</li>
+      <p>This was the second primary school I went to.</p>
+    <br/>
+    <br/>
+      <li>Cardinal Vaughan Memorial School</li>
+      <p>This is the secondary school I went to. While here, I did my GCSEs which were:</p>
+        <ul>
+          <li>English</li>
+          <li>Maths</li>
+          <li>History</li>
+          <li>Science</li>
+          <li>Design & Technology (resistant material)</li>
+          <li>IT</li>
+        </ul>
+    <br/>
+    <br/>
+      <li>Westminster Kingsway Collage</li>
+      <p>This is the collage I went to, to undertake an Animation & Games course</p>
+    <br/>
+    <br/>
+      <li>University of Northampton</li>
+      <p>The University I went to, to undertake Games Development</p>
+   </ol>
 
 
   </body>
