--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1> Mateus Macedo </h1>
 <a href="bio.html">Bio</a>
-<a href="cv">CV</a>
+<a href="cv.html">CV</a>
 
   </body>
 </html>
