--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
+<!-- Mateus Macedo 15413043 -->
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <meta charset="utf-8">
     <title>contact</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+    <a href="index.html"> <img src= "pictures/home.png" alt="home" class="homepicture"/>
+  </a>
+    <h6>contact</h6>
+  <h2>Your name:</h2>
+  <h2>Your Email:</h2>
+  <h2>Subject:</h2>
+  <h2>Message:</h2>
 
+<h6> submit </h6>
   </body>
 </html>
