--- a/cv.html
+++ b/cv.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
+<!-- Mateus Macedo 15413043 -->
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <meta charset="utf-8">
     <title>cv</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <h1>Mateus Dazzi Macedo's CV</h1>
+    <a href="index.html"> <img src= "pictures/home.png" alt="home" class="homepicture"/> </a>
+    <h4>Mateus Dazzi Macedo's CV</h4>
 
-<br/>
-
-    <p>Full name:Mateus Dazzi Macedo
+    <p>Full name: Mateus Dazzi Macedo
       <br/>
        date of birth: 30th December 1995</p>
-       <br/>
+
     <h2>List of skills and hobbies</h2>
     <p>here is a list of my skills</p>
     <ul>
@@ -26,10 +27,12 @@
 <!-- bulletpoint list -->
     <p>Here is a list of my hobbies</p>
     <ul>
+<!-- unorder list, the start of list which has no order therefore will use bullet points -->
       <li>Playing video games</li>
       <li>Gluing models together</li>
       <li>Playing pool</li>
       <li>Computers</li>
+<!-- indiviual parts of this unordered list -->
     </ul>
 
     <br/>
@@ -60,6 +63,7 @@
 
     <h2>Education</h2>
     <ol>
+    <!-- the start of an ordered list which will have the content numbered from 1 - 100 (for example) -->
       <li>St Joseph's</li>
       <p>This was the first primary school I went to which I have some memories of.</p>
     <br/>
