--- a/index.html
+++ b/index.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
+<!-- declares what the documentation language is -->
+
+<!-- Mateus Macedo 15413043 -->
+
 <html>
+<!-- Declares when the language starts -->
+
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+    <!-- google API font -->
     <meta charset="utf-8">
+
     <title>swf11</title>
+    <!-- what will be written in the URL -->
+
     <link rel="stylesheet" href="css/styles.css">
+    <!-- this links the css styles code with the HTML -->
+
   </head>
+<!-- where links and refernces are stored -->
+
   <body>
-    <h1> Mateus Macedo </h1>
-<a href="bio.html">Bio</a>
-<a href="cv.html">CV</a>
+
+    <h5> Mateus Macedo </h5>
+<!-- the heading of the page -->
+
+<img src= "pictures/Me.jpg" alt="a picture of me" class="mepicture"/>
+<!-- this is a code bringing up a picture which is in the pictures file and makeing it a link to the index
+    webpage, it also has a discription of "home" if the image dose not show-->
+
+<br/>
+<!-- break (leave a space here) -->
+<br/>
+
+<a href="bio.html" class="centering">Bio</a>
+<a href="cv.html" class="centering">CV</a>
+<a href="contact.html" class="centering">Contact</a>
+<!-- this is creating a hyperlink to different webpage. it is also using the centering 'rule'
+      defined within the css code -->
 
   </body>
+  <!-- the main part of a website's code and content would be put here -->
+
 </html>
